Phoenix release notes.

--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -485,6 +485,70 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/phoenix/">Phoenix</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Version 3.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>New Features:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Phoenix now has a <em>lazy list</em> implementation
+                      as an optional extension.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>New Example:</em>
+                <ul>
+                  <li>
+                    <div>
+                      A new example <em>bind_goose</em> shows the compatibility
+                      between <em>boost bind</em> and <em>boost
+                      phoenix bind</em>.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Fixed Bugs:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10927">#10927</a>
+                      Missing <code><span class="identifier">std</span><span class="special">::</span></code> qualifier for <code><span class="identifier">fabs</span></code> in <code><span class="identifier">phoenix</span><span class="special">/</span><span class="identifier">test</span><span class="special">/</span><span class="identifier">stdlib</span><span class="special">/</span><span class="identifier">cmath</span><span class="special">.</span><span class="identifier">cpp</span></code>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/11085">#11085</a>
+                      Missing qualifier for pow call in <code><span class="identifier">phoenix</span><span class="special">/</span><span class="identifier">test</span><span class="special">/</span><span class="identifier">function</span><span class="special">/</span><span class="identifier">function_tests</span><span class="special">.</span><span class="identifier">cpp</span></code>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fixes for a number of cases failing with <em>bind</em>,
+                      <em>lambda</em> and <em>let</em>.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
