Add "important note" from release candidate announcement.

--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -52,6 +52,18 @@
 
 
 
+  <div id="version_1_58_0.important_note">
+    <h3><span class="link">Important Note</span></h3>
+    <p>
+      There is a bug with the build scripts; you have to specify the address-mode
+      and architecture to b2. I used:
+    </p>
+<pre><span class="special">./</span><span class="identifier">b2</span> <span class="identifier">address</span><span class="special">-</span><span class="identifier">model</span><span class="special">=</span><span class="number">64</span> <span class="identifier">architecture</span><span class="special">=</span><span class="identifier">x86</span>
+</pre>
+    <p>
+      to test this.
+    </p>
+  </div>
   <div id="version_1_58_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
     <ul>
