Fix link markup + rebuild.

--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -1060,8 +1060,7 @@
             </li>
             <li>
               <div>
-                Other minor changes, see <a href="/doc/libs/master/doc/html/unordered/changes.html">/doc/html/unordered/changes.html</a>
-                changlog.
+                Other minor changes, see <a href="/doc/libs/master/doc/html/unordered/changes.html">changlog</a>.
               </div>
             </li>
           </ul>
