Christophe Henry will manage review of Metaparse.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -156,19 +156,19 @@ http://www.boost.org/development/website_updating.html
                       <ul>
                         <li>
                           <a href=
-                          "http://abel.web.elte.hu/metaparse/metaparse.zip">Source</a>
+                          "https://github.com/sabel83/mpllibs">Source</a>
                         </li>
 
                         <li>
                           <a href=
-                          "http://abel.web.elte.hu/metaparse/metaparse">Documentation</a>
+                          "http://abel.web.elte.hu/mpllibs/metaparse/">Documentation</a>
                         </li>
                       </ul>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Christophe Henry</td>
 
-                    <td>-</td>
+                    <td>May 25, 2015 - June 7, 2015</td>
                   </tr>
 
                   <tr>
