--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.58.0 - work in progress</title>
+  <title>Version 1.58.0 beta</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -35,18 +35,15 @@
               <h1>Version 1.58.0</h1>
             </div>
 
-                        <div class="section-note"><p>Note: This release is
-                        still under development. Please don't use this page as
-                        a source of information, it's here for development
-                        purposes only. Everything is subject to
-                        change.</p></div>
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.58.0 - work in progress</span></h2>
+              "news-title">Version 1.58.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/master/">Documentation</a>
-
+              <p><a href="/doc/libs/1_58_0_b1/">Documentation</a>
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.tar.bz2/download">boost_1_58_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.tar.gz/download">boost_1_58_0_b1.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.7z/download">boost_1_58_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.zip/download">boost_1_58_0_b1.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -69,14 +66,14 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/endian">Endian</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/endian">Endian</a>:</span>
   Types and conversion functions
           for correct byte ordering and more regardless of processor endianness.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/sort/">Sort</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/sort/">Sort</a>:</span>
           <ul>
             <li>
               <div>
@@ -94,7 +91,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/chrono/">Chrono</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
               <div>
@@ -164,7 +161,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -250,7 +247,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -267,7 +264,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/conversion/">Conversion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/conversion/">Conversion</a>:</span>
           <ul>
             <li>
               <div>
@@ -291,7 +288,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/date_time/">DateTime</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/date_time/">DateTime</a>:</span>
           <ul>
             <li>
               <div>
@@ -315,13 +312,13 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/flyweight/">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/flyweight/">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
                 Added hash support both with <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">hash</span></code>
-                and <a href="/doc/libs/master/doc/html/hash.html"><code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">hash</span></code></a>.
-                This can be optionally <a href="/doc/libs/master/libs/flyweight/doc/reference/flyweight.html#disable_hash_support">disabled</a>
+                and <a href="/doc/libs/1_58_0_b1/doc/html/hash.html"><code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">hash</span></code></a>.
+                This can be optionally <a href="/doc/libs/1_58_0_b1/libs/flyweight/doc/reference/flyweight.html#disable_hash_support">disabled</a>
                 to avoid clashes with legacy code where this support has already
                 been defined by the user.
               </div>
@@ -336,7 +333,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/function/">Function</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/function/">Function</a>:</span>
           <ul>
             <li>
               <div>
@@ -349,14 +346,14 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/functional/factory/">Functional/Factory</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/functional/factory/">Functional/Factory</a>:</span>
           <ul>
             <li>
               <div>
                 Minor breaking change: the default template parameter to indicate
                 that it shouldn't use an allocator is now <code><span class="keyword">void</span></code>,
                 instead of <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">none_t</span></code>.
-                For details, see the <a href="/doc/libs/master/libs/functional/factory/doc/html/#boost_functional_factory.changes">changelog</a>.
+                For details, see the <a href="/doc/libs/1_58_0_b1/libs/functional/factory/doc/html/#boost_functional_factory.changes">changelog</a>.
               </div>
             </li>
           </ul>
@@ -364,7 +361,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -446,7 +443,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/hash/">Hash</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -459,7 +456,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -486,7 +483,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -532,7 +529,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -545,7 +542,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -579,7 +576,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/master/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_58_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -588,7 +585,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -647,7 +644,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -686,7 +683,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -722,7 +719,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -751,7 +748,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/phoenix/">Phoenix</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/phoenix/">Phoenix</a>:</span>
           <ul>
             <li>
               <div>
@@ -815,7 +812,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -848,7 +845,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/random/">Random</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/random/">Random</a>:</span>
           <ul>
             <li>
               <div>
@@ -860,7 +857,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -1007,7 +1004,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/type_erasure/">TypeErasure</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/type_erasure/">TypeErasure</a>:</span>
           <ul>
             <li>
               <div>
@@ -1019,7 +1016,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -1031,7 +1028,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/units">Units</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/units">Units</a>:</span>
           <ul>
             <li>
               <div>
@@ -1043,7 +1040,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/unordered">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/unordered">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -1060,7 +1057,7 @@
             </li>
             <li>
               <div>
-                Other minor changes, see <a href="/doc/libs/master/doc/html/unordered/changes.html">changelog</a>.
+                Other minor changes, see <a href="/doc/libs/1_58_0_b1/doc/html/unordered/changes.html">changelog</a>.
               </div>
             </li>
           </ul>
@@ -1068,7 +1065,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
@@ -1076,8 +1073,8 @@
                 getter is now used by default in <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">get</span><span class="special">&lt;</span><span class="identifier">U</span><span class="special">&gt;(</span><span class="identifier">VariantT</span><span class="special">)</span></code> and <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">polymorphic_get</span><span class="special">&lt;</span><span class="identifier">U</span><span class="special">&gt;(</span><span class="identifier">VariantT</span><span class="special">)</span></code>. New getter asserts that type <code><span class="identifier">U</span></code> is one of the types that can
                 be stored in <code><span class="identifier">VariantT</span></code>.
                 Define <code><span class="identifier">BOOST_VARIANT_USE_RELAXED_GET_BY_DEFAULT</span></code>
-                to change default behavior. See <a href="/doc/libs/master/libs/variant/doc/html/variant/reference.html#header.boost.variant.get_hpp">get.hpp</a>
-                and <a href="/doc/libs/master/libs/variant/doc/html/variant/reference.html#header.boost.variant.polymorphic_get_hpp">polymorphic_get.hpp</a>
+                to change default behavior. See <a href="/doc/libs/1_58_0_b1/libs/variant/doc/html/variant/reference.html#header.boost.variant.get_hpp">get.hpp</a>
+                and <a href="/doc/libs/1_58_0_b1/libs/variant/doc/html/variant/reference.html#header.boost.variant.polymorphic_get_hpp">polymorphic_get.hpp</a>
                 descriptions for more info <a href="https://svn.boost.org/trac/boost/ticket/547">#547</a>.
               </div>
             </li>
