Tweak 'sort' entry.

--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -74,14 +74,8 @@
       <li>
         <div>
           <span class="library"><a href="/doc/libs/1_58_0_b1/libs/sort/">Sort</a>:</span>
-          <ul>
-            <li>
-              <div>
-                includes spreadsort, a general-case hybrid radix sort that is faster
-                than O(n*log(n))
-              </div>
-            </li>
-          </ul>
+  Includes spreadsort, a general-case
+          hybrid radix sort that is faster than O(n*log(n))
         </div>
       </li>
     </ul>
