Prep for 1.58.0 release.
Not happening yet, just getting it ready for the release.

--- a/common/menu-doc.html
+++ b/common/menu-doc.html
@@ -9,8 +9,11 @@
       <a href="/doc/libs">Libraries <span class="link">&gt;</span></a>
 
       <ul>
-        <li><a href="/doc/libs/1_57_0/" rel="nofollow">1.57.0 - Current
+        <li><a href="/doc/libs/1_58_0/" rel="nofollow">1.58.0 - Current
         Release <span class="link">&gt;</span></a></li>
+
+        <li><a href="/doc/libs/1_57_0/" rel="nofollow">1.57.0<span class=
+        "link">&gt;</span></a></li>
 
         <li><a href="/doc/libs/1_56_0/" rel="nofollow">1.56.0 <span class=
         "link">&gt;</span></a></li>
