Hana has been added to the review schedule.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -481,6 +481,26 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
                      
+                  <tr>
+                    <!-- Added May 2015 -->
+                    <td>Hana</td>
+
+                    <td>Louis Dionne</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/ldionne/hana">
+                            Source</a>
+                        <li><a href="http://ldionne.com/hana/">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Glen Fernandes</td>
+
+                    <td>-</td>
+                  </tr>
+
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
