Adam W has agreed to manage the review of QVM.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -87,7 +87,7 @@ http://www.boost.org/development/website_updating.html
                       "http://www.revergestudios.com/boost-qvm/">Source</a>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Adam Wulkiewicz</td>
 
                     <td>-</td>
                   </tr>
