Add configuration variable for data directory.

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -367,6 +367,7 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
                   <pre>
 &lt;?php
 define('BOOST_RSS_DIR', '/path/to/boost/website/workplace/rss');
+define('BOOST_DATA_DIR', '/path/to/boost/website/workplace/data');
 define('ARCHIVE_DIR', '/path/to/boost/website/workplace/archives');
 define('RESULTS_DIR', '/path/to/boost/website/workplace/testing');
 define('UNZIP', 'unzip');
