--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -39,41 +39,29 @@
               <h2><span class=
               "news-title">Version 1.58.0 beta</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/1_58_0_b1/">Documentation</a>
+              <p><span class=news-date">April 17th, 2015 07:53 GMT</span></p>
+              <p><a href="/doc/libs/1_58_0/">Documentation</a>
               <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.tar.bz2/download">boost_1_58_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.tar.gz/download">boost_1_58_0_b1.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.7z/download">boost_1_58_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0.beta.1/boost_1_58_0_b1.zip/download">boost_1_58_0_b1.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.bz2/download">boost_1_58_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.gz/download">boost_1_58_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.7z/download">boost_1_58_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.zip/download">boost_1_58_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
 
 
-  <div id="version_1_58_0.important_note">
-    <h3><span class="link">Important Note</span></h3>
-    <p>
-      There is a bug with the build scripts; you have to specify the address-mode
-      and architecture to b2. I used:
-    </p>
-<pre><span class="special">./</span><span class="identifier">b2</span> <span class="identifier">address</span><span class="special">-</span><span class="identifier">model</span><span class="special">=</span><span class="number">64</span> <span class="identifier">architecture</span><span class="special">=</span><span class="identifier">x86</span>
-</pre>
-    <p>
-      to test this.
-    </p>
-  </div>
   <div id="version_1_58_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/endian">Endian</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/endian">Endian</a>:</span>
   Types and conversion functions
           for correct byte ordering and more regardless of processor endianness.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/sort/">Sort</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/sort/">Sort</a>:</span>
   Includes spreadsort, a general-case
           hybrid radix sort that is faster than O(n*log(n))
         </div>
@@ -85,7 +73,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/asio/">Asio</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/asio/">Asio</a>:</span>
           <ul>
             <li>
               <div>
@@ -209,7 +197,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/chrono/">Chrono</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
               <div>
@@ -279,7 +267,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -365,7 +353,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -382,7 +370,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/conversion/">Conversion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/conversion/">Conversion</a>:</span>
           <ul>
             <li>
               <div>
@@ -406,7 +394,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/date_time/">DateTime</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/date_time/">DateTime</a>:</span>
           <ul>
             <li>
               <div>
@@ -430,13 +418,13 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/flyweight/">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/flyweight/">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
                 Added hash support both with <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">hash</span></code>
-                and <a href="/doc/libs/1_58_0_b1/doc/html/hash.html"><code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">hash</span></code></a>.
-                This can be optionally <a href="/doc/libs/1_58_0_b1/libs/flyweight/doc/reference/flyweight.html#disable_hash_support">disabled</a>
+                and <a href="/doc/libs/1_58_0/doc/html/hash.html"><code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">hash</span></code></a>.
+                This can be optionally <a href="/doc/libs/1_58_0/libs/flyweight/doc/reference/flyweight.html#disable_hash_support">disabled</a>
                 to avoid clashes with legacy code where this support has already
                 been defined by the user.
               </div>
@@ -451,7 +439,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/function/">Function</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/function/">Function</a>:</span>
           <ul>
             <li>
               <div>
@@ -464,14 +452,14 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/functional/factory/">Functional/Factory</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/functional/factory/">Functional/Factory</a>:</span>
           <ul>
             <li>
               <div>
                 Minor breaking change: the default template parameter to indicate
                 that it shouldn't use an allocator is now <code><span class="keyword">void</span></code>,
                 instead of <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">none_t</span></code>.
-                For details, see the <a href="/doc/libs/1_58_0_b1/libs/functional/factory/doc/html/#boost_functional_factory.changes">changelog</a>.
+                For details, see the <a href="/doc/libs/1_58_0/libs/functional/factory/doc/html/#boost_functional_factory.changes">changelog</a>.
               </div>
             </li>
           </ul>
@@ -479,7 +467,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -561,7 +549,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/geometry/">Geometry</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -890,7 +878,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/hash/">Hash</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -903,7 +891,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -930,7 +918,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -976,7 +964,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -989,7 +977,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -1036,7 +1024,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_58_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_58_0/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -1045,7 +1033,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -1104,7 +1092,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -1143,7 +1131,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -1179,7 +1167,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -1208,7 +1196,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
@@ -1263,7 +1251,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/phoenix/">Phoenix</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/phoenix/">Phoenix</a>:</span>
           <ul>
             <li>
               <div>
@@ -1327,7 +1315,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -1360,7 +1348,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/random/">Random</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/random/">Random</a>:</span>
           <ul>
             <li>
               <div>
@@ -1372,7 +1360,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -1519,7 +1507,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/type_erasure/">TypeErasure</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/type_erasure/">TypeErasure</a>:</span>
           <ul>
             <li>
               <div>
@@ -1531,7 +1519,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -1543,7 +1531,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/units">Units</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/units">Units</a>:</span>
           <ul>
             <li>
               <div>
@@ -1555,7 +1543,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/unordered">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/unordered">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -1572,7 +1560,7 @@
             </li>
             <li>
               <div>
-                Other minor changes, see <a href="/doc/libs/1_58_0_b1/doc/html/unordered/changes.html">changelog</a>.
+                Other minor changes, see <a href="/doc/libs/1_58_0/doc/html/unordered/changes.html">changelog</a>.
               </div>
             </li>
           </ul>
@@ -1580,7 +1568,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_58_0_b1/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_58_0/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
@@ -1588,8 +1576,8 @@
                 getter is now used by default in <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">get</span><span class="special">&lt;</span><span class="identifier">U</span><span class="special">&gt;(</span><span class="identifier">VariantT</span><span class="special">)</span></code> and <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">polymorphic_get</span><span class="special">&lt;</span><span class="identifier">U</span><span class="special">&gt;(</span><span class="identifier">VariantT</span><span class="special">)</span></code>. New getter asserts that type <code><span class="identifier">U</span></code> is one of the types that can
                 be stored in <code><span class="identifier">VariantT</span></code>.
                 Define <code><span class="identifier">BOOST_VARIANT_USE_RELAXED_GET_BY_DEFAULT</span></code>
-                to change default behavior. See <a href="/doc/libs/1_58_0_b1/libs/variant/doc/html/variant/reference.html#header.boost.variant.get_hpp">get.hpp</a>
-                and <a href="/doc/libs/1_58_0_b1/libs/variant/doc/html/variant/reference.html#header.boost.variant.polymorphic_get_hpp">polymorphic_get.hpp</a>
+                to change default behavior. See <a href="/doc/libs/1_58_0/libs/variant/doc/html/variant/reference.html#header.boost.variant.get_hpp">get.hpp</a>
+                and <a href="/doc/libs/1_58_0/libs/variant/doc/html/variant/reference.html#header.boost.variant.polymorphic_get_hpp">polymorphic_get.hpp</a>
                 descriptions for more info <a href="https://svn.boost.org/trac/boost/ticket/547">#547</a>.
               </div>
             </li>
