Note about build issues with Python.
Thanks to Tom Kent.

--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -49,6 +49,13 @@
 
 
 
+  <div id="version_1_58_0.known_issue">
+    <h3><span class="link">Known Issue</span></h3>
+    <p>
+      Boost.Python will fail to build if it is complied agains a version of python
+      that is one of: 3.0.X, 3.1.X, 3.2.X, 3.3.X. Versions 2.X and 3.4+ are not affected.
+    </p>
+  </div>
   <div id="version_1_58_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
     <ul>
