Patch for building python.

--- a/patches/index.html
+++ b/patches/index.html
@@ -33,6 +33,14 @@ http://www.boost.org/development/website_updating.html
               late to be fixed in the release. Be careful as they have
               not been through the normal testing process.</p>
 
+              <h2>1.58.0</h2>
+
+              <ul>
+                <li><a href=
+                "1_58_0/0001-Fix-exec_file-for-Python-3-3.4.patch">1_58_0/0001-Fix-exec_file-for-Python-3-3.4.patch</a>
+                (for libs/python).</li>
+              </ul>
+
               <h2>1.55.0</h2>
 
               <ul>
