--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -55,6 +55,20 @@
       Boost.Python will fail to build if it is complied agains a version of python
       that is one of: 3.0.X, 3.1.X, 3.2.X, 3.3.X. Versions 2.X and 3.4+ are not affected.
     </p>
+    <p>
+      This is fixed in <a href="https://github.com/boostorg/python/commit/3e405b6fd5db5615bbef241763de070118222ca7">git</a>.
+    </p>
+    <p>
+      Patches:
+    </p>
+    <ul>
+      <li>
+        <div>
+          <a href="/patches/1_58_0/0001-Fix-exec_file-for-Python-3-3.4.patch">0001-Fix-exec_file-for-Python-3-3.4.patch</a>
+          (for libs/python).
+        </div>
+      </li>
+    </ul>
   </div>
   <div id="version_1_58_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
