--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -552,6 +552,21 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                 <tr>
+                  <td>Boost 1.58.0 Released</td>
+
+                  <td></td>
+
+                  <td>Marshall Clow</td>
+
+                  <td>April 17, 2015</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/news/version_1_58_0">Notes</a>
+                  </td>
+                </tr>
+
+                <tr>
                   <td>Endian Mini-Review</td>
 
                   <td>Beman Dawes</td>
@@ -624,6 +639,21 @@ http://www.boost.org/development/website_updating.html
 		      Accepted</a>
                     </td>
                   </tr>
+
+                <tr>
+                  <td>Boost 1.57.0 Released</td>
+
+                  <td></td>
+
+                  <td>Marshall Clow</td>
+
+                  <td>November 3, 2014</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/news/version_1_57_0">Notes</a>
+                  </td>
+                </tr>
 
                 <tr>
                   <td>Review Wizard Status Report</td>
