Added Http to the schedule.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -509,6 +509,26 @@ http://www.boost.org/development/website_updating.html
                     <td>June 10, 2015 - June 24, 2015</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added February 2014 -->
+                    <td>Http</td>
+
+                    <td>Vinícius dos Santos Oliveira</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="http://rrsd.com/blincubator.com/bi_library/http/?gform_post_id=1460">Incubator</a>
+                        <!-- <li><a href="">
+                        Documentation</a> -->
+                      </ul>
+                    </td>                     
+
+                    <td>Bjorn Reese</td>
+
+                    <td>-</td>
+                  </tr>
+
+
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
