filled in doc link, but left commented: have people use the incubator.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -518,7 +518,7 @@ http://www.boost.org/development/website_updating.html
                     <td>
                       <ul>
                         <li><a href="http://rrsd.com/blincubator.com/bi_library/http/?gform_post_id=1460">Incubator</a>
-                        <!-- <li><a href="">
+                        <!-- <li><a href="http://boostgsoc14.github.io/boost.http/">
                         Documentation</a> -->
                       </ul>
                     </td>                     
