*** empty log message ***

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -484,9 +484,9 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 
-                    <td>Needed</td>
+                    <td>Vladimir Prus</td>
 
-                    <td>-</td>
+                    <td>June 29, 2015 - July 12, 2015</td>
                   </tr>
                      
                   <tr>
