Patch for Fusion regression.

--- a/patches/index.html
+++ b/patches/index.html
@@ -39,6 +39,9 @@ http://www.boost.org/development/website_updating.html
                 <li><a href=
                 "1_58_0/0001-Fix-exec_file-for-Python-3-3.4.patch">1_58_0/0001-Fix-exec_file-for-Python-3-3.4.patch</a>
                 (for libs/python).</li>
+                <li><a href=
+                "1_58_0/0002-Fix-a-regression-with-non-constexpr-types.patch">1_58_0/0002-Fix-a-regression-with-non-constexpr-types.patch</a>
+                (for libs/fusion).</li>
               </ul>
 
               <h2>1.55.0</h2>
