Fix text on library metadata link.

--- a/common/menu-development.html
+++ b/common/menu-development.html
@@ -57,9 +57,8 @@
         Guidelines for Integral Constant Expressions <span class=
         "link">&gt;</span></a></li>
 
-        <li><a href="/development/library_metadata.html">Coding
-        Guidelines for Integral Constant Expressions <span class=
-        "link">&gt;</span></a></li>
+        <li><a href="/development/library_metadata.html">Library
+        Metadata <span class="link">&gt;</span></a></li>
       </ul>
     </li>
 
