AFIO Review has been scheduled.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -337,9 +337,9 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Ahmed Charles</td>
 
-                    <td>-</td>
+                    <td>July 17, 2015 - July 27 2015</td>
                   </tr>
 
                   <tr>
